hard-gists/6532185/run.log
=== Docker Run Log for 6532185 ===
Started at: Mi 29. Okt 16:34:53 CET 2025

[2025-10-29 16:34:53] START: Running container for 6532185
[2025-10-29 16:34:54] SUCCESS: Container c9158fb250e1d69d70dfe8335b5c93fc4bb53d339b9eb4028310266db873013d started for 6532185
=== Container logs for 6532185 ===
  File "/snippet.py", line 44
    print key, value
    ^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6532185 ===
[2025-10-29 16:34:56] INFO: Container c9158fb250e1d69d70dfe8335b5c93fc4bb53d339b9eb4028310266db873013d has stopped
